--- a/html projects/huski/assests/css/style.css
+++ b/html projects/huski/assests/css/style.css
@@ -479,6 +479,17 @@ header .main-menu{
   display: flex;
   align-items: center;
 }
-
 /* Huskiapp-plateform Section End */
 
+/* Huski-purchase-Groth section Start */
+.growth-main-content{
+  background-image: url(../image/huski-trasperent-image.png);
+  background-repeat: no-repeat;
+  opacity: 100%;
+  height: 497px;
+}
+.growth-main-heading .heading{
+font-size: 40px;
+line-height: 60px;
+}
+/* Huski-purchase-Groth section End */
