--- a/html projects/huski/assests/css/style.css
+++ b/html projects/huski/assests/css/style.css
@@ -61,11 +61,12 @@ Developed by: Oneonic
 }
 
 body{
-  height: 100vh;
-  width: 100vw;
   font-family: var(--font-family-);
   background-color: var(--body-backgroundColor--);
   overflow-x: hidden;
+}
+section{
+  overflow: hidden;
 }
 
 h1,
@@ -127,7 +128,7 @@ p{
 text-align: center;
 }
 .letter-space{
-  letter-spacing: .2px !important;
+  letter-spacing: .5px !important;
 }
 .link-btn{
   height: 55px;
@@ -180,7 +181,7 @@ button{
 /* Header-Section Start */
 .navigation-wrapper{
   display: flex;
-  width: 100vw;
+  width: 100%;
   height: 44px;
   align-items: center;
   justify-content: space-between;
@@ -285,10 +286,9 @@ header .main-menu{
 /* Home-Page-Banner Section Start*/
 #home-page-banner{
   overflow: hidden;
-}
-.homepage-banner-container{
   background-color: var(--banner-background--);
 }
+
 .homepage-banner-content-wrepper{
   background-image: url(../image/banner-image/huski-big-logo.png);
   background-repeat: no-repeat;
@@ -357,6 +357,8 @@ header .main-menu{
 /* Home-Page-Brand Section Start */
 #homePage-brand-section{
   overflow: hidden;
+  margin-top: 4rem;
+
 }
 .brand-img{
   height: 90px;
@@ -386,7 +388,9 @@ header .main-menu{
 #app-card-section{
   overflow: hidden;
   background-color: #fff;
+  margin-top: 11rem;
 }
+
 .app-card{
   border: 2px solid var(--blue-2--);
   display: flex;
@@ -395,6 +399,7 @@ header .main-menu{
   flex-direction: column;
   height: 470px;
   width: 400px;
+  margin-top: 45px;
   background-image: url(../image/huski-small/huski-transperent-small.png);
   background-repeat: no-repeat;
   background-position: 100% 100%;
@@ -456,12 +461,12 @@ header .main-menu{
 /* Huskiapp-Plateform Section Start */
 #huski-plateform-section{
   overflow: hidden;
-}
-.huskiapp-plateform-container{
+  margin-top: 12rem;
   background-color: var(--light-purple--);
 }
+
 .plateform-content{
-  width: 550px;
+  width: 575px;
   padding: 20px 0;
 
 }
@@ -482,14 +487,242 @@ header .main-menu{
 /* Huskiapp-plateform Section End */
 
 /* Huski-purchase-Groth section Start */
+#Huski-purchase-Groth{
+  overflow: hidden;
+  margin-top: 11rem ;
+}
+
+.growth-main-wrapper{
+  position: relative;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .growth-main-content{
-  background-image: url(../image/huski-trasperent-image.png);
-  background-repeat: no-repeat;
-  opacity: 100%;
-  height: 497px;
+  position: absolute;
+  height: 521px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 490px;
+  row-gap: 1.8rem;
+  padding: 0rem 0 0 6.5rem;
+}
+
+.repeat-purchase-wrepper{
+  margin:2rem 50px 0 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.repeat-purchase-container{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-content: center;
+  padding: 0 5%;
+}
+
+.repeat-purchase-heading .heading{
+  font-size: 24px;
+  padding-bottom: 12px;
+}
+
+.purchase-theme-video-content{
+  display: flex;
+  flex-direction: column;
 }
 .growth-main-heading .heading{
-font-size: 40px;
-line-height: 60px;
+  font-size: 40px;
+  line-height: 60px;
 }
+
+.theme-photo-container{
+  height: 320px;
+  display: flex;
+}
+.theme-photo-container .theme-video{
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.repeat-purchase-description .description{
+  font-weight: 400;
+}
+.theme-photo-container .theme-video  .theme-video-btn{
+  position: absolute;
+}
+
+.theme-photo-container .theme-photo{
+  margin-left: 1rem;
+}
+
 /* Huski-purchase-Groth section End */
+
+/* Homepage-Blog-Section section Start */
+.homepage-blog-section{
+  overflow: hidden;
+}
+.homepage-blog-container{
+  height: 523px;
+  display: flex;
+  flex-direction: column;
+  border-top: 1px solid #EDEDED;
+  margin-top: 12rem;
+}
+.blog-container-heading {
+
+ margin-top: 5rem;
+ font-size: 24px;
+}
+.homepage-blog-heading .heading{
+  font-size: 17px;
+}
+.homepage-blog-detail .detail {
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 22px;
+}
+.homepage-blog-heading ,.homepage-blog-detail{
+  max-width: 347px;
+}
+
+.homepage-blog-card{
+  margin-top: 36px ;
+}
+
+/* Homepage-Blog-Section section End */
+
+/*---------- Footer-Section-Start--------- */
+/* Inquery section Start */
+
+.inquery-container{
+  background-color: var(--link-btn--);
+  margin-top: 9rem;
+  height: 438px;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  background-image: url(../image/inquery-img.png);
+  background-repeat: no-repeat;
+  background-position: 100% 0;
+}
+
+.inquery-heading .heading{
+  font-size: 44px;
+  color: var(--white--);
+  line-height: 57px;
+}
+.inquery-email{
+  max-width: 45%;
+}
+.inquery-heading{
+  max-width: 58%; 
+}
+.inquery-email{
+  border: 2px solid #ffffff;
+  display: flex;
+  height: 71px;
+  justify-content:  space-between;
+  align-items: center;
+  margin: 2.5rem 0rem 0 0;
+}
+
+.inquery-email input[type=email]{
+  border: none;
+  outline: none;
+  background-color: transparent;
+  height: 63px;
+  padding: 0 23px;
+  font-size: 19px;
+  color: var(--white--);
+  font-family: var(--font-family-heading);
+}
+
+.inquery-email input[type=submit]{
+  border: none;
+  outline: none; 
+  height: 63px;
+  width: 201px;
+  margin: 0 4px;
+  color: var(--link-btn--);
+  font-weight: 700;
+  font-size: 23px;
+  font-family: var(--font-family-);
+}
+
+.inquery-email input[type=email]::placeholder{
+  color: var(--white--);
+  font-family: var(--font-family-heading);
+}
+/* Inquery section End */
+
+/* Footer-link section Start */
+#footer-link-section{
+  padding: 4rem 4rem 3rem 4rem;
+}
+.shopify-app-footer-link,.shopify-app-update{
+  display: flex;
+  justify-content: center;
+  flex-flow: column;
+  margin: 1rem 0 1.8rem 0;
+}
+.shopify-app-footer-link .link-heading{
+  padding-bottom: .5rem;
+}
+
+.shopify-app-footer-link .links{
+  text-decoration: none;
+  color: var(--black--);
+  font-weight: 400;
+  padding-top: 1.8rem;
+}
+.shopify-app-update .email{
+  margin: 1.190rem 0 0.75rem 0;
+  border: 1.5px solid var(--blue-2--);
+  display: flex;
+}
+
+.shopify-app-update .email input[type=email]{
+  width: 100%;
+  border: none;
+  outline: none;
+  margin: 1rem;
+  color: #1750DA;
+  font-size: 13.38px;
+  font-weight: 500;
+  font-family: var(--font-family-heading);
+}
+.shopify-app-update .email input[type=email]::placeholder{
+  color: #1750DA;
+}
+.shopify-app-update .subscribe input[type=submit]{
+  padding: .75rem 0 .75rem 0;
+  width: 100%;
+  font-size: 18px;
+  font-weight: 700;
+  font-family: var(--font-family-);
+  background-color: var(--blue-2--);
+  color: var(--white--);
+  border: none;
+  outline: none;
+}
+/* Footer-link section End */
+/* copyright Section Start */
+.copyright-section{
+  display: flex;
+  justify-content: center;
+  border-top: 1px solid rgba(0, 0, 0, 0.200);
+  padding: 1.7rem 0;
+}
+.huskiapp-img img{
+  width: 205px;
+  height: 40px;
+}
+/* copyright Section End */
+/*---------- Footer-Section-End--------- */
